--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
             background-color: #f4f4f9;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            transition: all 0.3s ease;
+            /* הסרה של display:flex; כדי לאפשר גלילה חופשית ונוחות */
         }
         .container {
             background-color: #fff;
@@ -33,30 +29,34 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: 100%;
             max-width: 600px;
-            margin-top: 20px;
-            display: flex;
-            flex-direction: column;
-            transition: margin-left 0.3s ease;
+            /* למקם את הקובייה במרכז */
+            margin: 40px auto;
         }
         .form-container {
             flex: 1;
         }
         h1, h2 {
             color: #333;
-            text-align: center;
+            text-align: center; /* כותרות ממורכזות */
         }
         label {
             display: block;
             margin: 15px 0 5px;
             color: #333;
+            text-align: center; /* ממרכז את הכיתוב של הלייבל */
         }
-        input[type="text"], input[type="tel"], input[type="number"], select {
-            width: 100%;
+        input[type="text"],
+        input[type="tel"],
+        input[type="number"],
+        select {
+            width: 80%;
             padding: 8px;
-            margin-top: 5px;
+            margin: 0 auto 10px auto; 
             border: 1px solid #ccc;
             border-radius: 4px;
-            direction: rtl;
+            display: block;      /* כדי ש-center יעבוד */
+            text-align: center;  /* הטקסט בתוך התיבה ממורכז */
+            direction: rtl;      /* אם רוצים שיישאר בכיוון ימין-שמאל (עברית) */
         }
         .hidden {
             display: none;
@@ -72,6 +72,7 @@
             display: flex;
             align-items: center;
             justify-content: flex-end;
+            text-align: right;
         }
         .product input[type="number"] {
             width: 60px;
@@ -85,18 +86,21 @@
             margin-bottom: 10px;
             font-size: 1.5em;
             font-weight: bold;
+            text-align: center;
         }
         #preTaxPrice {
             margin-top: 15px;
             font-size: 1em;
             font-weight: normal;
             direction: rtl;
+            text-align: center;
         }
         #totalPriceWithTax {
             margin-top: 15px;
             font-size: 1em;
             font-weight: normal;
             direction: rtl;
+            text-align: center;
         }
         button {
             background-color: #007bff;
@@ -106,9 +110,9 @@
             border-radius: 4px;
             cursor: pointer;
             font-size: 1em;
-            margin-right: 10px;
+            margin: 20px auto 0 auto;
             display: block;
-            width: 100%;
+            width: 80%; /* קצת שוליים */
             box-sizing: border-box;
         }
         button:hover {
@@ -120,6 +124,7 @@
             display: flex;
             align-items: center;
             font-size: 1.05em;
+            justify-content: center;
         }
         #creditCardCheckbox input {
             margin-left: 10px;
@@ -143,22 +148,16 @@
         }
         /* סגנונות למחשב */
         @media (min-width: 601px) {
-            body.align-left .container {
-                margin-left: 20px;
-            }
             .image-container {
-                display: none;
+                display: none; 
                 width: 50%;
             }
-            .container.align-left .image-container {
-                display: flex;
-                justify-content: left;
-            }
         }
+        /* סגנונות לנייד */
         @media (max-width: 600px) {
             .container {
-                flex-direction: column;
                 padding: 10px;
+                margin-top: 20px;
             }
             h1, h2 {
                 font-size: 1.5em;
@@ -181,9 +180,6 @@
             .image-container {
                 height: 350px;
             }
-            .container.margin-top-320 {
-                margin-top: 320px;
-            }
         }
     </style>
 </head>
@@ -194,21 +190,21 @@
         <h1>הזמנה</h1>
 
         <form id="orderForm">
-            <label style="direction: rtl">שם המזמין:
+            <label>שם המזמין:
                 <input type="text" id="customerName" required>
             </label>
-            <label style="direction: rtl">בית מרקחת:
-                <select style="direction: rtl" id="placeType" required onchange="updateForm()">
-                    <option style="text-align: center;" value="" disabled selected>-- בחר/י --</option>
-                    <option style="text-align: center;" value="pharmacy">בית מרקחת</option>
-                    <option style="text-align: center;" value="future_pharmacy">בית מרקחת - רוקחים עתיד</option>
-                    <option style="text-align: center;" value="shrem_pharmacy">בית מרקחת - שרמ</option>
+            <label>בית מרקחת:
+                <select id="placeType" required onchange="updateForm()">
+                    <option value="" disabled selected>-- בחר/י --</option>
+                    <option value="pharmacy">בית מרקחת</option>
+                    <option value="future_pharmacy">בית מרקחת - רוקחים עתיד</option>
+                    <option value="shrem_pharmacy">בית מרקחת - שרמ</option>
                 </select>
             </label>
-            <label style="direction: rtl" id="placeNameLabel">שם בית המרקחת:
+            <label id="placeNameLabel">שם בית המרקחת:
                 <input type="text" id="placeName" required>
             </label>
-            <label style="direction: rtl">מספר פלאפון של המזמין:
+            <label>מספר פלאפון של המזמין:
                 <input type="tel" id="phoneNumber" required>
             </label>
 
@@ -218,11 +214,12 @@
             </div>
 
             <div id="totalPriceContainer">
-                <div style="text-align: center;" id="totalPriceLabel">:סה"כ לתשלום</div>
-                <div style="direction: rtl;" id="preTaxPrice">סה"כ לתשלום ללא מע"מ: 0 ש"ח</div>
-                <div style="direction: rtl;" id="totalPriceWithTax">סה"כ לתשלום כולל מע"מ: 0 ש"ח</div>
+                <div id="totalPriceLabel">:סה\"כ לתשלום</div>
+                <div id="preTaxPrice">סה\"כ לתשלום ללא מע\"מ: 0 ש\"ח</div>
+                <div id="totalPriceWithTax">סה\"כ לתשלום כולל מע\"מ: 0 ש\"ח</div>
             </div>
-            <div style="direction: rtl;" id="creditCardCheckbox">
+
+            <div id="creditCardCheckbox">
                 <label style="font-weight: bold;" for="creditCard">
                     <input type="checkbox" id="creditCard" required>מאשר תשלום בכרטיס אשראי
                 </label>
@@ -238,23 +235,33 @@
 </div>
 
 <script>
-    // מאזין לשינוי ה-placeType כדי להציג תמונה בצד
-    document.getElementById('placeType').addEventListener('change', function() {
+    // פונקציה לעיצוב מספרים עם פסיק לאלפים ושתי ספרות אחרי הנקודה
+    function formatNumber(num) {
+      return num.toLocaleString('en-US', {
+        minimumFractionDigits: 2,
+        maximumFractionDigits: 2
+      });
+    }
+
+    // מאזין לשינוי ה-placeType כדי להציג תמונה ומוצרים
+    const placeTypeSelect = document.getElementById('placeType');
+    placeTypeSelect.addEventListener('change', function() {
         const imageContainer = document.querySelector('.image-container');
         const formContainer = document.querySelector('.container');
-        
+
         if (window.innerWidth >= 601) {
             imageContainer.style.display = 'flex';
             formContainer.style.marginLeft = '700px';
-        } else if (window.innerWidth <= 600) {
+        } else {
             formContainer.classList.add('margin-top-320');
             imageContainer.style.display = 'flex';
             document.querySelector('body').classList.add('align-center');
         }
     });
+
 </script>
 
-<script style="direction: rtl;">
+<script>
     // אובייקט המכיל את רשימת המוצרים לפי סוג בית מרקחת
     const productList = {
         pharmacy: [
@@ -264,14 +271,14 @@
             {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט' , price: 19.90, bulkPrice: 17.90, bulkThreshold:1},
             {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20},
             {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50},
-            {id: 'quantity13', name: '"בדיקת הריון "בשעה טובה', price: 18.90},
+            {id: 'quantity13', name: '\"בדיקת הריון \"בשעה טובה', price: 18.90},
             {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90, bulkPrice: 10, bulkThreshold:1},
             {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 17.20, bulkPrice: 10, bulkThreshold:1},
             {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 33.90},
             {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
             {id: 'quantity11', name: 'בדיקת ביוץ - 7 באריזה', price: 21.00},
-            {id: 'quantity12', name: '"בדיקת ביוץ "בשעה טובה', price: 29.90}
+            {id: 'quantity12', name: '\"בדיקת ביוץ \"בשעה טובה', price: 29.90}
         ],
         future_pharmacy: [
             {id: 'quantity14', name: 'בדיקה לאבחון שפעת + קורונה', price: 24, bulkPrice: 20, bulkThreshold:1},
@@ -281,8 +288,8 @@
             {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט', price: 19.90, bulkPrice: 17.90, bulkThreshold:1},
             {id: 'quantity4', name: 'בדיקת הריון 1 - רוקחים עתיד', price: 2.90},
             {id: 'quantity5', name: 'בדיקת הריון 2 - רוקחים עתיד', price: 5.20},
-            {id: 'quantity6', name: ''"בדיקת הריון "בשעה טובה', price: 18.90},
-            {id: 'quantity7', name: '"בדיקת ביוץ "בשעה טובה', price: 29.90},
+            {id: 'quantity6', name: '\"בדיקת הריון \"בשעה טובה', price: 18.90},
+            {id: 'quantity7', name: '\"בדיקת ביוץ \"בשעה טובה', price: 29.90},
             {id: 'quantity8', name: 'בדיקת ביוץ 7 באריזה', price: 21.00},
             {id: 'quantity9', name: 'בדיקה לדלקת בשתן', price: 13.90, bulkPrice: 10, bulkThreshold:1},
             {id: 'quantity11', name: 'בדיקת קנדידה וגינאלית', price: 17.20, bulkPrice: 10, bulkThreshold:1},
@@ -296,17 +303,18 @@
             {id: 'quantity3', name: 'A + B בדיקה לשפעת - פורמט עט' , price: 19.90, bulkPrice: 17.90, bulkThreshold:1},
             {id: 'quantity4', name: 'בדיקת הריון 1', price: 5.20},
             {id: 'quantity5', name: 'בדיקת הריון 2', price: 6.50},
-            {id: 'quantity13', name: '"בדיקת הריון "בשעה טובה', price: 18.90},
+            {id: 'quantity13', name: '\"בדיקת הריון \"בשעה טובה', price: 18.90},
             {id: 'quantity6', name: 'בדיקה לדלקת בשתן', price: 13.90, bulkPrice: 10, bulkThreshold:1},
             {id: 'quantity7', name: 'בדיקת קנדידה וגינאלית', price: 17.20, bulkPrice: 10, bulkThreshold:1},
             {id: 'quantity8', name: 'בדיקת סמים 8 פרמטרים', price: 33.90},
             {id: 'quantity9', name: 'בדיקה לגילוי דם סמוי בצואה', price: 24.90},
             {id: 'quantity10', name: 'בדיקה לאבחון וירוס הקורונה', price: 30.00},
             {id: 'quantity11', name: 'בדיקת ביוץ - 7 באריזה', price: 21.00},
-            {id: 'quantity12', name: '"בדיקת ביוץ "בשעה טובה', price: 29.90}
+            {id: 'quantity12', name: '\"בדיקת ביוץ \"בשעה טובה', price: 29.90}
         ]
     };
 
+    // פונקציה שמציגה את המוצרים לאחר שנבחר type
     function updateForm() {
         const placeType = document.getElementById('placeType').value;
         const productListDiv = document.getElementById('productList');
@@ -323,15 +331,9 @@
                 `;
                 productListDiv.appendChild(productDiv);
             });
-            document.body.classList.add('align-right');
-            document.body.classList.remove('align-center');
-            document.querySelector('.image-container').classList.add('show');
-            document.querySelector('.image-container').classList.remove('hide');
         } else {
-            document.body.classList.add('align-center');
-            document.body.classList.remove('align-right');
-            document.querySelector('.image-container').classList.add('hide');
-            document.querySelector('.image-container').classList.remove('show');
+            // לא נבחר מקום - לא מציגים מוצרים
+            productListDiv.innerHTML = '';
         }
         
         updateImage();
@@ -339,7 +341,6 @@
 
     function calculateTotal() {
         let total = 0;
-        let totalProducts = 0; // למעקב אחר כמות כוללת
         const placeType = document.getElementById('placeType').value;
 
         if (placeType) {
@@ -348,30 +349,38 @@
                 const quantityInput = document.getElementById(product.id);
                 if (quantityInput.value > 0) {
                     const quantity = parseInt(quantityInput.value);
+                    // בדיקה אם מגיע בונוס (לא חובה אם אין צורך)
                     let finalQuantity = quantity;
-
-                    // בדיקת סף/בונוס
                     if (product.bonusQuantity && product.bulkThreshold && quantity >= product.bulkThreshold) {
                         finalQuantity += product.bonusQuantity;
                     }
 
-                    // הנחה (bulkPrice) אם רלוונטי
-                    let actualPrice;
-                    if (product.bulkPrice !== undefined && product.bulkThreshold && quantity >= product.bulkThreshold) {
+                    // האם יש מחיר הנחה (bulkPrice)?
+                    let actualPrice = product.price;
+                    if (
+                        product.bulkPrice !== undefined &&
+                        product.bulkThreshold &&
+                        quantity >= product.bulkThreshold
+                    ) {
                         actualPrice = product.bulkPrice;
-                    } else {
-                        actualPrice = product.price;
                     }
 
-                    totalProducts += finalQuantity;
+                    // סכום מצטבר למוצר הנוכחי
                     total += actualPrice * quantity;
                 }
             });
         }
+
+        // חישוב לפני מע\"מ ואחרי מע\"מ
         const preTaxTotal = total;
         const taxTotal = preTaxTotal * 1.18;
-        document.getElementById('preTaxPrice').innerText = `סה"כ ללא מע"מ: ${preTaxTotal.toFixed(2)} ש"ח`;
-        document.getElementById('totalPriceWithTax').innerText = `סה"כ כולל מע"מ: ${taxTotal.toFixed(2)} ש"ח`;
+
+        // עיצוב המספרים בפורמט עם פסיק לאלפים
+        const formattedPreTax = formatNumber(preTaxTotal);
+        const formattedTax = formatNumber(taxTotal);
+
+        document.getElementById('preTaxPrice').innerText = `סה\"כ לתשלום ללא מע\"מ: ${formattedPreTax} ש\"ח`;
+        document.getElementById('totalPriceWithTax').innerText = `סה\"כ לתשלום כולל מע\"מ: ${formattedTax} ש\"ח`;
     }
 
     function updateImage() {
@@ -404,24 +413,26 @@
                 if (quantityInput && parseInt(quantityInput.value) > 0) {
                     const quantity = parseInt(quantityInput.value);
 
-                    // חישוב בונוס
+                    // בדיקת בונוס
                     let bonusCount = 0;
                     if (product.bonusQuantity && product.bulkThreshold && quantity >= product.bulkThreshold) {
                         bonusCount = product.bonusQuantity;
                     }
 
-                    // קביעת המחיר בפועל
+                    // חישוב המחיר בפועל
                     let actualPrice = product.price;
-                    if (product.bulkPrice !== undefined && product.bulkThreshold && quantity >= product.bulkThreshold) {
+                    if (
+                        product.bulkPrice !== undefined &&
+                        product.bulkThreshold &&
+                        quantity >= product.bulkThreshold
+                    ) {
                         actualPrice = product.bulkPrice;
                     }
 
-                    // מחיר כולל למוצר
+                    // סה\"כ למוצר הזה
                     let lineTotal = actualPrice * quantity;
 
-                    // בניית השורה למוצר
-                    productSummary += `- ${product.name}\r\n   כמות הזמנה: ${quantity}\r\n   מחיר ליחידה: ${actualPrice} ש\"ח\r\n   סה\"כ למוצר זה: ${lineTotal.toFixed(2)} ש\"ח\r\n`;
-
+                    productSummary += `- ${product.name}\r\n   כמות: ${quantity}\r\n   מחיר ליחידה: ${formatNumber(actualPrice)} ש\"ח\r\n   סה\"כ למוצר זה: ${formatNumber(lineTotal)} ש\"ח\r\n`;
                     if (bonusCount > 0) {
                         productSummary += `   בונוס למוצר זה: ${bonusCount}\r\n`;
                     }
@@ -435,13 +446,28 @@
 
         // סיכום להזמנה
         const shortOrderDetails = 
-`פרטי המזמין:\r\n----------------\r\nשם המזמין: ${customerName}\r\nסוג המקום: ${placeType}\r\nשם המקום: ${placeName}\r\nמספר פלאפון: ${phoneNumber}\r\n\r\nמוצרים בהזמנה:\r\n----------------\r\n${productSummary}\r\n\r\nסיכום:\r\n----------------\r\n${preTaxPrice}\r\n${totalPriceWithTax}\r\n`;
+`פרטי המזמין:
+----------------
+שם המזמין: ${customerName}
+סוג המקום: ${placeType}
+שם המקום: ${placeName}
+מספר פלאפון: ${phoneNumber}
+
+מוצרים בהזמנה:
+----------------
+${productSummary}
+
+סיכום:
+----------------
+${preTaxPrice}
+${totalPriceWithTax}
+`;
 
         // הכנסי כאן את ה-Service ID וה-Template ID שלך מ-EmailJS
         const serviceID = 'service_ja10oz8';
         const templateID = 'template_cbiw9df';
 
-        // זהו האובייקט שמכיל את הפרטים שיופיעו במייל (ע"פ המשתנים בתבנית EmailJS)
+        // זהו האובייקט שמכיל את הפרטים שיופיעו במייל (ע\"פ המשתנים בתבנית EmailJS)
         const templateParams = {
             customer_name: customerName,
             place_type: placeType,
